# better_mandelbrot

./: Cargo.toml  README.md
benches/: repaint.rs
examples/: bench.rs
mandelbrot_proc_macros/: Cargo.toml
mandelbrot_proc_macros/src/: lib.rs
src/: complex.rs  lib.rs  main.rs  mandelbrot.rs  task_queue.rs  worker.rs
