[package]
name = "mandelbrot_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
f256 = { version = "0.6.0", optional = true }
fpdec = { version = "0.11.0", optional = true }

[[example]]
name = "bench"
features = ["quad", "octo", "full"]

[features]
quad = ["fpdec"]
octo = ["f256"]
full = ["quad", "octo"]