[package]
name = "mandelbrot_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
f256 = { version = "0.6.0", optional = true }
fpdec = { version = "0.11.0", optional = true }
multi_compare = "0.1.0"
mandelbrot_proc_macros = { path = "mandelbrot_proc_macros" }

[dev-dependencies]
criterion = "0.5.1"

[features]
quad = ["fpdec"]
octo = ["f256"]

[[bench]]
name = "repaint"
harness = false
features = ["quad", "octo"]
